[package]
name = "std_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
description = "A library for parsing Rust Standard Library macros"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2",features = ["full"] }
proc-macro2 = "1"
quote = { version = "1" , optional = true}
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
[features]
default = ["quote", "extra-traits", "executing"]
extra-traits = ["syn/extra-traits"]
executing = []